--- a/gimnasia/src/index.css
+++ b/gimnasia/src/index.css
@@ -7,3 +7,11 @@
 :root {
   font-family: "Parkinsans", sans-serif;
 }
+
+.gallery-image {
+  @apply rounded-lg shadow-lg;
+}
+
+.album-title {
+  @apply text-xl font-bold mb-4 text-gray-800;
+}
